// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`billingPlanFeatures getEnterprisePlanCardFeatures should return plan card features for the enterprise plan 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <React.Fragment>
      Discounted prices for 
      <b>
        10k+ tickets
      </b>
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": "Custom limit of phone numbers",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": false,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Advanced price 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.36}
      freeTickets={5000}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        10
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Basic price 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.4}
      freeTickets={300}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": true,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Custom price 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.32}
      freeTickets={10000}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        150
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_car"
    />,
    "label": <React.Fragment>
      <b>
        Full
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": false,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": false,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Pro price 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.36}
      freeTickets={2000}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        3
      </b>
       Phone number
      s
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_bike"
    />,
    "label": <React.Fragment>
      <b>
        Lite
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": false,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": false,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for Starter price 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.4}
      freeTickets={50}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram & DMs",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": true,
    "label": "Phone",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": true,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features for legacy price 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.06}
      freeTickets={600}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_bike"
    />,
    "label": <React.Fragment>
      <b>
        Lite
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": true,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;

exports[`billingPlanFeatures getPlanCardFeaturesForPrices should return plan card features with disabled help center 1`] = `
[
  {
    "icon": <PlanFeatureMaterialIcon
      icon="playlist_add_check"
    />,
    "label": <BillableTicketsLabel
      currency="usd"
      extraTicketCost={0.4}
      freeTickets={300}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="thumb_up"
    />,
    "label": "Facebook, Messenger, Instagram",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="forum"
    />,
    "label": "Live chat",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="phone"
    />,
    "isDisabled": false,
    "label": <React.Fragment>
      <b>
        1
      </b>
       Phone number
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="auto_awesome"
    />,
    "label": "Macros and rules",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="insert_emoticon"
    />,
    "isDisabled": false,
    "label": "Satisfaction surveys",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="web_asset"
    />,
    "isDisabled": false,
    "label": <HelpCenterLabel
      disabled={false}
    />,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="directions_walk"
    />,
    "label": <React.Fragment>
      <b>
        Self
      </b>
       onboarding
    </React.Fragment>,
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="attach_money"
    />,
    "isDisabled": true,
    "label": "Revenue statistics",
  },
  {
    "icon": <PlanFeatureVectorIcon
      url="test-file-stub"
    />,
    "isDisabled": true,
    "label": "Magento integration",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="person_pin"
    />,
    "isDisabled": true,
    "label": "Dedicated success manager",
  },
  {
    "icon": <PlanFeatureMaterialIcon
      icon="blur_on"
    />,
    "isDisabled": true,
    "label": "Custom services",
  },
]
`;
